# pytorch_advanced

practice/: pyproject.toml
practice/.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copy.data.json  copy.meta.json  copyreg.data.json  copyreg.meta.json  datetime.data.json  datetime.meta.json  difflib.data.json  difflib.meta.json  enum.data.json  enum.meta.json  errno.data.json  errno.meta.json  (+70 more)
practice/.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
practice/.mypy_cache/3.8/ctypes/: __init__.data.json  __init__.meta.json
practice/.mypy_cache/3.8/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  (+8 more)
practice/.virtual_documents/chapter7/: 7-6_Transformer.ipynb.py  transformer.ipynb.py
practice/chapter7/: 7-1_Tokenizer.ipynb  7-2_torchtext.ipynb  7-4_vectorize.ipynb  7-5_IMDb_Dataset_DataLoader.ipynb  7-6_Transformer.ipynb  make_folders_and_data_downloads.ipynb  playground.ipynb  transformer.ipynb
(+426 files in other folders)
