[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["moisutsu <moisutsu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
mecab-python3 = "^0.996.5"
torch = "^1.5.0"
torchvision = "^0.6.0"
torchtext = "^0.6.0"
gensim = "^3.8.3"
spacy = "^2.2.4"
jupyter-lsp = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
